aggregator/timestamps: created route
