# storage/api/json-schemes/admin-api-openapi-scheme.json
@@ -1934,6 +1934,203 @@
                 ]
             }
         },
+        "/admin-api/trace-aggregator/trace-metrics": {
+            "post": {
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "timestamp_period": {
+                                        "type": "string",
+                                        "enum": [
+                                            "minute5",
+                                            "minute30",
+                                            "hour",
+                                            "hour4",
+                                            "hour12",
+                                            "day",
+                                            "day3",
+                                            "day7",
+                                            "day15",
+                                            "month",
+                                            "month3",
+                                            "month6",
+                                            "year"
+                                        ]
+                                    },
+                                    "service_ids": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "integer"
+                                        }
+                                    },
+                                    "logging_to": {
+                                        "type": "string",
+                                        "format": "date"
+                                    },
+                                    "types": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "tags": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "statuses": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "duration_from": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "nullable": true
+                                    },
+                                    "duration_to": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "nullable": true
+                                    },
+                                    "data": {
+                                        "type": "object",
+                                        "properties": {
+                                            "filter": {
+                                                "type": "array",
+                                                "items": {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "field": {
+                                                            "type": "string"
+                                                        },
+                                                        "null": {
+                                                            "type": "boolean"
+                                                        },
+                                                        "numeric": {
+                                                            "type": "object",
+                                                            "properties": {
+                                                                "value": {
+                                                                    "type": "number",
+                                                                    "format": "float"
+                                                                },
+                                                                "comp": {
+                                                                    "type": "string",
+                                                                    "enum": [
+                                                                        "=",
+                                                                        "!=",
+                                                                        ">",
+                                                                        ">=",
+                                                                        "<",
+                                                                        "<="
+                                                                    ]
+                                                                }
+                                                            }
+                                                        },
+                                                        "string": {
+                                                            "type": "object",
+                                                            "properties": {
+                                                                "value": {
+                                                                    "type": "string"
+                                                                },
+                                                                "comp": {
+                                                                    "type": "string",
+                                                                    "enum": [
+                                                                        "equals",
+                                                                        "contains",
+                                                                        "starts",
+                                                                        "ends"
+                                                                    ]
+                                                                }
+                                                            }
+                                                        },
+                                                        "boolean": {
+                                                            "type": "object",
+                                                            "properties": {
+                                                                "value": {
+                                                                    "type": "boolean"
+                                                                }
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            },
+                                            "fields": {
+                                                "type": "array",
+                                                "items": {
+                                                    "type": "string"
+                                                }
+                                            }
+                                        }
+                                    },
+                                    "has_profiling": {
+                                        "type": "boolean"
+                                    }
+                                },
+                                "required": [
+                                    "timestamp_period"
+                                ],
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "description",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "items": {
+                                                    "type": "array",
+                                                    "nullable": false,
+                                                    "items": {
+                                                        "properties": {
+                                                            "timestamp": {
+                                                                "type": "string",
+                                                                "nullable": false
+                                                            },
+                                                            "count": {
+                                                                "type": "integer",
+                                                                "nullable": false
+                                                            }
+                                                        },
+                                                        "required": [
+                                                            "timestamp",
+                                                            "count"
+                                                        ]
+                                                    }
+                                                }
+                                            },
+                                            "required": [
+                                                "items"
+                                            ]
+                                        }
+                                    },
+                                    "required": [
+                                        "data"
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/admin-api/trace-cleaner/settings": {
             "get": {
                 "responses": {
